--- a/app/src/main/res/layout/activity_download_details.xml
+++ b/app/src/main/res/layout/activity_download_details.xml
@@ -7,10 +7,19 @@
     android:clipChildren="false"
     android:clipToPadding="false">
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/download_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="?actionBarTheme">
+        android:theme="?actionBarTheme"
+        app:liftOnScroll="false">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -28,13 +37,4 @@
             app:tabMode="fixed" />
 
     </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/download_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
