--- a/app/src/main/res/menu/menu_modules.xml
+++ b/app/src/main/res/menu/menu_modules.xml
@@ -6,7 +6,7 @@
         android:id="@+id/menu_search"
         android:title="@string/menuSearch"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:title="@string/export_"
