Add support for module scope

--- a/app/src/main/res/menu/context_menu_modules.xml
+++ b/app/src/main/res/menu/context_menu_modules.xml
@@ -5,6 +5,9 @@
         android:id="@+id/menu_launch"
         android:title="@string/module_launch" />
     <item
+        android:id="@+id/menu_scope"
+        android:title="@string/menu_scope" />
+    <item
         android:id="@+id/menu_download_updates"
         android:title="@string/module_download_updates" />
     <item
