--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,4 +9,11 @@
     <attr name="downloadVerticalPadding" format="dimension" />
     <attr name="actionBarPopupTheme" format="reference" />
     <attr name="tabLayoutTheme" format="reference" />
+
+    <declare-styleable name="MasterSwitch">
+        <attr name="masterSwitchTextAppearance" format="reference" />
+        <attr name="masterSwitchBackgroundOn" format="color" />
+        <attr name="masterSwitchBackgroundOff" format="color" />
+        <attr name="masterSwitchForeground" format="color" />
+    </declare-styleable>
 </resources>
