--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,24 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
 
+    <style name="MasterSwitch">
+        <item name="masterSwitchBackgroundOff">#80868b</item>
+        <item name="masterSwitchBackgroundOn">?colorAccent</item>
+        <item name="masterSwitchTextAppearance">@style/MasterSwitch.TextAppearance</item>
+        <item name="switchStyle">@style/MasterSwitch.Switch</item>
+        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark</item>
+    </style>
+
+    <style name="MasterSwitch.Switch" parent="@style/Widget.AppCompat.CompoundButton.Switch">
+        <item name="trackTint">#33ffffff</item>
+        <item name="thumbTint">@android:color/white</item>
+    </style>
+
+    <style name="MasterSwitch.TextAppearance" parent="@style/TextAppearance.AppCompat.Body2">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
     <style name="ThemeOverlay" />
 
     <style name="ThemeOverlay.Md2">
