--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,12 +33,11 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
 
-    <style name="MasterSwitch">
+    <style name="MasterSwitch" parent="@style/ThemeOverlay.AppCompat.Dark">
         <item name="masterSwitchBackgroundOff">#80868b</item>
         <item name="masterSwitchBackgroundOn">?colorAccent</item>
         <item name="masterSwitchTextAppearance">@style/MasterSwitch.TextAppearance</item>
         <item name="switchStyle">@style/MasterSwitch.Switch</item>
-        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark</item>
     </style>
 
     <style name="MasterSwitch.Switch" parent="@style/Widget.AppCompat.CompoundButton.Switch">
