Fix over scroll effect

--- a/app/src/main/res/layout/activity_scope_list.xml
+++ b/app/src/main/res/layout/activity_scope_list.xml
@@ -44,7 +44,7 @@
             android:orientation="vertical"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <androidx.recyclerview.widget.RecyclerView
+            <org.meowcat.edxposed.manager.widget.RecyclerViewBugFixed
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
