--- a/app/src/main/res/layout/item_version.xml
+++ b/app/src/main/res/layout/item_version.xml
@@ -63,7 +63,7 @@
         </LinearLayout>
     </LinearLayout>
 
-    <org.meowcat.edxposed.manager.widget.DownloadView
+    <org.meowcat.edxposed.manager.ui.widget.DownloadView
         android:id="@+id/downloadView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
