--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <org.meowcat.edxposed.manager.widget.RecyclerViewBugFixed
+        <org.meowcat.edxposed.manager.ui.widget.RecyclerViewBugFixed
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
