--- a/app/src/main/res/layout/activity_download_details_not_found.xml
+++ b/app/src/main/res/layout/activity_download_details_not_found.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="8dp"
-    tools:context=".DownloadDetailsActivity">
+    tools:context=".ui.activity.DownloadDetailsActivity">
 
     <ImageView
         android:layout_width="wrap_content"
