--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:clipChildren="false"
             android:clipToPadding="false"
             android:orientation="vertical"
-            tools:context=".MainActivity">
+            tools:context=".ui.activity.MainActivity">
 
             <RelativeLayout
                 android:layout_width="match_parent"
