--- a/app/src/main/res/layout/activity_scope_list.xml
+++ b/app/src/main/res/layout/activity_scope_list.xml
@@ -28,7 +28,7 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <org.meowcat.edxposed.manager.widget.MasterSwitch
+        <org.meowcat.edxposed.manager.ui.widget.MasterSwitch
             android:id="@+id/master_switch"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
@@ -44,7 +44,7 @@
             android:orientation="vertical"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <org.meowcat.edxposed.manager.widget.RecyclerViewBugFixed
+            <org.meowcat.edxposed.manager.ui.widget.RecyclerViewBugFixed
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
