--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -131,9 +131,9 @@
 
         <SwitchPreferenceCompat
             android:defaultValue="false"
-            android:key="disable_resources"
-            android:summary="@string/settings_disable_resources_summary"
-            android:title="@string/settings_disable_resources"
+            android:key="enable_resources"
+            android:summary="@string/settings_enable_resources_summary"
+            android:title="@string/settings_enable_resources"
             app:iconSpaceReserved="false" />
 
         <SwitchPreferenceCompat
